# haskell-regex

./: regex.cabal
src/: Regex.hs
