name:                regex
version:             0.1.0.0
synopsis:            A simple regex matcher
homepage:            https://github.com/rpereira/regex#readme
license:             BSD3
license-file:        LICENSE
author:              Rui Afonso Pereira
maintainer:          ruiafonsopereira@gmail.com
copyright:           2017 Rui Afonso Pereira
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Regex
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rpereira/regex
